--- a/ACE Hardware Store 2/css/style.css
+++ b/ACE Hardware Store 2/css/style.css
@@ -233,7 +233,7 @@ section{
 }
 
 .home-bg{
-   background:url(../images/videoframe_2923.png) no-repeat;
+   background:url(https://c8.alamy.com/comp/PA27PP/orlando-floridaace-hardwarestore-exterior-front-entrancesignagewheelbarrowsoutdoor-chairsfl171029084-PA27PP.jpg) no-repeat;
    background-size: cover;
    background-position: center;
 }
@@ -1060,3 +1060,4 @@ section{
 
 
 }
+
